// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MK29 — shablon matritsasi snapshot (10/10) > accountant matritsasi 1`] = `
{
  "attachment": "view:ALL print:ALL",
  "auditlog": "view:ALL print:ALL",
  "bankaccount": "view:ALL create:ALL update:ALL",
  "bankimport": "view:ALL create:ALL update:ALL approve:ALL print:ALL",
  "bom": "view:ALL print:ALL",
  "branch": "view:ALL",
  "bundle": "view:ALL print:ALL",
  "call": "view:ALL print:ALL",
  "cashdesk": "view:ALL create:ALL update:ALL print:ALL",
  "cashiersession": "view:ALL print:ALL",
  "cashin": "view:ALL create:ALL update:ALL approve:ALL print:ALL",
  "cashout": "view:ALL create:ALL update:ALL approve:ALL print:ALL",
  "commissionreport": "view:ALL print:ALL",
  "consignment": "view:ALL print:ALL",
  "contactperson": "view:ALL print:ALL",
  "contract": "view:ALL print:ALL",
  "counterparty": "view:ALL print:ALL",
  "counterpartyadjustment": "view:ALL create:ALL update:ALL approve:ALL print:ALL",
  "country": "view:ALL print:ALL",
  "currency": "view:ALL print:ALL",
  "customentity": "view:ALL print:ALL",
  "customerorder": "view:ALL print:ALL",
  "debt": "view:ALL print:ALL",
  "debtcardpayment": "view:ALL print:ALL",
  "debtpayment": "view:ALL print:ALL",
  "debtreport": "view:ALL print:ALL",
  "demand": "view:ALL print:ALL",
  "discount": "view:ALL print:ALL",
  "employee": "view:ALL",
  "enter": "view:ALL print:ALL",
  "exchangerate": "view:ALL print:ALL",
  "expenseitem": "view:ALL print:ALL",
  "facturein": "view:ALL create:ALL update:ALL print:ALL",
  "factureout": "view:ALL create:ALL update:ALL print:ALL",
  "internalorder": "view:ALL print:ALL",
  "inventory": "view:ALL print:ALL",
  "invoicein": "view:ALL print:ALL",
  "invoiceout": "view:ALL print:ALL",
  "label": "view:ALL print:ALL",
  "loss": "view:ALL print:ALL",
  "move": "view:ALL print:ALL",
  "mxik": "view:ALL print:ALL",
  "onlineorder": "view:ALL print:ALL",
  "opportunity": "view:ALL print:ALL",
  "organization": "view:ALL",
  "paymentin": "view:ALL create:ALL update:ALL approve:ALL print:ALL",
  "paymentout": "view:ALL create:ALL update:ALL approve:ALL print:ALL",
  "payroll": "view:ALL create:ALL update:ALL print:ALL",
  "pipeline": "view:ALL print:ALL",
  "prepayment": "view:ALL create:ALL update:ALL approve:ALL print:ALL",
  "prepaymentreturn": "view:ALL create:ALL update:ALL approve:ALL print:ALL",
  "pricelist": "view:ALL print:ALL",
  "pricetype": "view:ALL print:ALL",
  "processing": "view:ALL print:ALL",
  "processingorder": "view:ALL print:ALL",
  "processingprocess": "view:ALL print:ALL",
  "processingstage": "view:ALL print:ALL",
  "product": "view:ALL print:ALL",
  "productfolder": "view:ALL print:ALL",
  "project": "view:ALL print:ALL",
  "publication": "view:ALL print:ALL",
  "purchaseorder": "view:ALL print:ALL",
  "purchasereturn": "view:ALL print:ALL",
  "region": "view:ALL print:ALL",
  "report": "view:ALL print:ALL",
  "retailsale": "view:ALL print:ALL",
  "saleschannel": "view:ALL print:ALL",
  "salesreturn": "view:ALL print:ALL",
  "service": "view:ALL print:ALL",
  "store": "view:ALL print:ALL",
  "storecell": "view:ALL print:ALL",
  "supply": "view:ALL print:ALL",
  "task": "view:ALL print:ALL",
  "tasktype": "view:ALL print:ALL",
  "taxrate": "view:ALL print:ALL",
  "trackingcode": "view:ALL print:ALL",
  "uom": "view:ALL print:ALL",
  "variant": "view:ALL print:ALL",
  "workorder": "view:ALL print:ALL",
}
`;

exports[`MK29 — shablon matritsasi snapshot (10/10) > admin matritsasi 1`] = `
{
  "analitika": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "attachment": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "auditlog": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "bankaccount": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "bankimport": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "bom": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "branch": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "bundle": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "call": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "cashdesk": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "cashiersession": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "cashin": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "cashout": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "commissionreport": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "consignment": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "contactperson": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "contract": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "counterparty": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "counterpartyadjustment": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "country": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "currency": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "customentity": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "customerorder": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "debt": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "debtcardpayment": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "debtpayment": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "debtreport": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "demand": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "discount": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "employee": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "enter": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "exchangerate": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "expenseitem": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "facturein": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "factureout": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "hractivity": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "hrdashboard": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "hremployee": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "hrmessage": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "hrmessagedemand": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "hrmessageorder": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "hrmessagepaymentin": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "hrmessagereturn": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "hrmessagesupply": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "hrreport": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "hrsalary": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "hrsettings": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "hrtask": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "internalorder": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "inventory": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "invoicein": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "invoiceout": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "label": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "loss": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "move": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "mxik": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "onlineorder": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "opportunity": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "organization": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "paymentin": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "paymentout": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "payroll": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "pipeline": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "prepayment": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "prepaymentreturn": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "pricelist": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "pricetype": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "processing": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "processingorder": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "processingprocess": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "processingstage": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "product": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "productfolder": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "project": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "publication": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "purchaseorder": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "purchasereturn": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "region": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "report": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "retailsale": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "role": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "saleschannel": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "salesreturn": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "service": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "settings": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "store": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "storecell": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "supply": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "task": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "tasktype": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "taxrate": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "trackingcode": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "uom": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "variant": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "workorder": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
}
`;

exports[`MK29 — shablon matritsasi snapshot (10/10) > cashier matritsasi 1`] = `
{
  "cashiersession": "view:ALL create:ALL update:ALL print:ALL",
  "cashout": "view:ALL create:ALL print:ALL",
  "counterparty": "view:ALL create:ALL",
  "currency": "view:ALL",
  "customerorder": "view:ALL approve:ALL",
  "debt": "view:ALL create:ALL",
  "debtpayment": "view:ALL create:ALL",
  "exchangerate": "view:ALL",
  "expenseitem": "view:ALL",
  "pricetype": "view:ALL",
  "product": "view:ALL",
  "productfolder": "view:ALL",
  "retailsale": "view:ALL create:ALL update:ALL print:ALL",
  "settings": "view:ALL",
}
`;

exports[`MK29 — shablon matritsasi snapshot (10/10) > driver matritsasi 1`] = `
{
  "counterparty": "view:OWN_GROUP",
  "customerorder": "view:OWN_GROUP",
  "demand": "view:OWN_GROUP print:OWN_GROUP",
  "task": "view:OWN update:OWN",
}
`;

exports[`MK29 — shablon matritsasi snapshot (10/10) > owner matritsasi 1`] = `
{
  "analitika": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "attachment": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "auditlog": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "bankaccount": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "bankimport": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "bom": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "branch": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "bundle": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "call": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "cashdesk": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "cashiersession": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "cashin": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "cashout": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "commissionreport": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "consignment": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "contactperson": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "contract": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "counterparty": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "counterpartyadjustment": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "country": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "currency": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "customentity": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "customerorder": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "debt": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "debtcardpayment": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "debtpayment": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "debtreport": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "demand": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "discount": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "employee": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "enter": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "exchangerate": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "expenseitem": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "facturein": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "factureout": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "hractivity": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "hrdashboard": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "hremployee": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "hrmessage": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "hrmessagedemand": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "hrmessageorder": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "hrmessagepaymentin": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "hrmessagereturn": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "hrmessagesupply": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "hrreport": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "hrsalary": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "hrsettings": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "hrtask": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "internalorder": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "inventory": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "invoicein": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "invoiceout": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "label": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "loss": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "move": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "mxik": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "onlineorder": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "opportunity": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "organization": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "paymentin": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "paymentout": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "payroll": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "pipeline": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "prepayment": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "prepaymentreturn": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "pricelist": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "pricetype": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "processing": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "processingorder": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "processingprocess": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "processingstage": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "product": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "productfolder": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "project": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "publication": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "purchaseorder": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "purchasereturn": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "region": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "report": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "retailsale": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "role": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "saleschannel": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "salesreturn": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "service": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "settings": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "store": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "storecell": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "supply": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "task": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "tasktype": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "taxrate": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "trackingcode": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "uom": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "variant": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
  "workorder": "view:ALL create:ALL update:ALL delete:ALL approve:ALL print:ALL",
}
`;

exports[`MK29 — shablon matritsasi snapshot (10/10) > sales_manager matritsasi 1`] = `
{
  "attachment": "view:ALL print:ALL",
  "bankimport": "view:ALL print:ALL",
  "bom": "view:ALL print:ALL",
  "bundle": "view:ALL print:ALL",
  "call": "view:ALL create:ALL update:ALL print:ALL",
  "cashdesk": "view:ALL print:ALL",
  "cashiersession": "view:ALL print:ALL",
  "cashin": "view:ALL print:ALL",
  "cashout": "view:ALL print:ALL",
  "commissionreport": "view:ALL create:ALL update:ALL delete:OWN_GROUP approve:ALL print:ALL",
  "consignment": "view:ALL create:ALL update:ALL delete:OWN_GROUP approve:ALL print:ALL",
  "contactperson": "view:ALL create:ALL update:ALL print:ALL",
  "contract": "view:ALL create:ALL update:ALL print:ALL",
  "counterparty": "view:ALL create:ALL update:ALL print:ALL",
  "counterpartyadjustment": "view:ALL print:ALL",
  "country": "view:ALL print:ALL",
  "currency": "view:ALL print:ALL",
  "customentity": "view:ALL print:ALL",
  "customerorder": "view:ALL create:ALL update:ALL delete:OWN_GROUP approve:ALL print:ALL",
  "debt": "view:ALL print:ALL",
  "debtcardpayment": "view:ALL print:ALL",
  "debtpayment": "view:ALL print:ALL",
  "debtreport": "view:ALL print:ALL",
  "demand": "view:ALL create:ALL update:ALL delete:OWN_GROUP approve:ALL print:ALL",
  "discount": "view:ALL print:ALL",
  "employee": "view:ALL",
  "enter": "view:ALL print:ALL",
  "exchangerate": "view:ALL print:ALL",
  "expenseitem": "view:ALL print:ALL",
  "facturein": "view:ALL print:ALL",
  "factureout": "view:ALL create:ALL update:ALL delete:OWN_GROUP approve:ALL print:ALL",
  "internalorder": "view:ALL print:ALL",
  "inventory": "view:ALL print:ALL",
  "invoicein": "view:ALL print:ALL",
  "invoiceout": "view:ALL create:ALL update:ALL delete:OWN_GROUP approve:ALL print:ALL",
  "label": "view:ALL print:ALL",
  "loss": "view:ALL print:ALL",
  "move": "view:ALL print:ALL",
  "mxik": "view:ALL print:ALL",
  "onlineorder": "view:ALL print:ALL",
  "opportunity": "view:ALL create:ALL update:ALL print:ALL",
  "paymentin": "view:ALL print:ALL",
  "paymentout": "view:ALL print:ALL",
  "pipeline": "view:ALL create:ALL update:ALL print:ALL",
  "prepayment": "view:ALL print:ALL",
  "prepaymentreturn": "view:ALL print:ALL",
  "pricelist": "view:ALL print:ALL",
  "pricetype": "view:ALL print:ALL",
  "processing": "view:ALL print:ALL",
  "processingorder": "view:ALL print:ALL",
  "processingprocess": "view:ALL print:ALL",
  "processingstage": "view:ALL print:ALL",
  "product": "view:ALL print:ALL",
  "productfolder": "view:ALL print:ALL",
  "project": "view:ALL print:ALL",
  "publication": "view:ALL print:ALL",
  "purchaseorder": "view:ALL print:ALL",
  "purchasereturn": "view:ALL print:ALL",
  "region": "view:ALL print:ALL",
  "report": "view:ALL print:ALL",
  "retailsale": "view:ALL print:ALL",
  "saleschannel": "view:ALL print:ALL",
  "salesreturn": "view:ALL create:ALL update:ALL delete:OWN_GROUP approve:ALL print:ALL",
  "service": "view:ALL print:ALL",
  "store": "view:ALL print:ALL",
  "storecell": "view:ALL print:ALL",
  "supply": "view:ALL print:ALL",
  "task": "view:ALL create:ALL update:ALL print:ALL",
  "tasktype": "view:ALL create:ALL update:ALL print:ALL",
  "taxrate": "view:ALL print:ALL",
  "trackingcode": "view:ALL print:ALL",
  "uom": "view:ALL print:ALL",
  "variant": "view:ALL print:ALL",
  "workorder": "view:ALL print:ALL",
}
`;

exports[`MK29 — shablon matritsasi snapshot (10/10) > seller matritsasi 1`] = `
{
  "bundle": "view:ALL",
  "call": "view:OWN_AND_GROUP create:ALL update:OWN",
  "contactperson": "view:OWN_AND_GROUP create:ALL update:OWN",
  "contract": "view:OWN_AND_GROUP",
  "counterparty": "view:OWN_AND_GROUP create:ALL update:OWN",
  "customerorder": "view:OWN_AND_GROUP create:ALL update:OWN_AND_GROUP print:OWN_AND_GROUP",
  "demand": "view:OWN_AND_GROUP create:ALL update:OWN_AND_GROUP print:OWN_AND_GROUP",
  "discount": "view:ALL",
  "invoiceout": "view:OWN_AND_GROUP create:ALL update:OWN_AND_GROUP print:OWN_AND_GROUP",
  "mxik": "view:ALL",
  "opportunity": "view:OWN_AND_GROUP create:ALL update:OWN",
  "pricetype": "view:ALL",
  "product": "view:ALL",
  "productfolder": "view:ALL",
  "service": "view:ALL",
  "task": "view:OWN_AND_GROUP create:ALL update:OWN",
  "taxrate": "view:ALL",
  "trackingcode": "view:ALL",
  "uom": "view:ALL",
  "variant": "view:ALL",
}
`;

exports[`MK29 — shablon matritsasi snapshot (10/10) > storekeeper matritsasi 1`] = `
{
  "bundle": "view:ALL",
  "demand": "view:ALL update:ALL approve:ALL print:ALL",
  "enter": "view:ALL create:ALL update:ALL print:ALL",
  "internalorder": "view:ALL create:ALL update:ALL print:ALL",
  "inventory": "view:ALL create:ALL update:ALL print:ALL",
  "label": "view:ALL print:ALL",
  "loss": "view:ALL create:ALL update:ALL print:ALL",
  "move": "view:ALL create:ALL update:ALL print:ALL",
  "product": "view:ALL",
  "productfolder": "view:ALL",
  "store": "view:ALL",
  "storecell": "view:ALL update:ALL",
  "supply": "view:ALL update:ALL print:ALL",
  "uom": "view:ALL",
  "variant": "view:ALL",
}
`;

exports[`MK29 — shablon matritsasi snapshot (10/10) > supplier matritsasi 1`] = `
{
  "attachment": "view:ALL print:ALL",
  "bom": "view:ALL print:ALL",
  "bundle": "view:ALL print:ALL",
  "call": "view:ALL print:ALL",
  "cashdesk": "view:ALL print:ALL",
  "cashiersession": "view:ALL print:ALL",
  "commissionreport": "view:ALL print:ALL",
  "consignment": "view:ALL print:ALL",
  "contactperson": "view:ALL create:ALL update:ALL print:ALL",
  "contract": "view:ALL create:ALL update:ALL print:ALL",
  "counterparty": "view:ALL create:ALL update:ALL print:ALL",
  "country": "view:ALL print:ALL",
  "currency": "view:ALL print:ALL",
  "customentity": "view:ALL print:ALL",
  "customerorder": "view:ALL print:ALL",
  "debt": "view:ALL print:ALL",
  "debtcardpayment": "view:ALL print:ALL",
  "debtpayment": "view:ALL print:ALL",
  "debtreport": "view:ALL print:ALL",
  "demand": "view:ALL print:ALL",
  "discount": "view:ALL print:ALL",
  "enter": "view:ALL print:ALL",
  "exchangerate": "view:ALL print:ALL",
  "expenseitem": "view:ALL print:ALL",
  "facturein": "view:ALL create:ALL update:ALL delete:OWN_GROUP approve:ALL print:ALL",
  "factureout": "view:ALL print:ALL",
  "internalorder": "view:ALL print:ALL",
  "inventory": "view:ALL print:ALL",
  "invoicein": "view:ALL create:ALL update:ALL delete:OWN_GROUP approve:ALL print:ALL",
  "invoiceout": "view:ALL print:ALL",
  "label": "view:ALL print:ALL",
  "loss": "view:ALL print:ALL",
  "move": "view:ALL print:ALL",
  "mxik": "view:ALL print:ALL",
  "onlineorder": "view:ALL print:ALL",
  "opportunity": "view:ALL print:ALL",
  "pipeline": "view:ALL print:ALL",
  "pricelist": "view:ALL print:ALL",
  "pricetype": "view:ALL print:ALL",
  "processing": "view:ALL print:ALL",
  "processingorder": "view:ALL print:ALL",
  "processingprocess": "view:ALL print:ALL",
  "processingstage": "view:ALL print:ALL",
  "product": "view:ALL create:ALL update:ALL print:ALL",
  "productfolder": "view:ALL create:ALL update:ALL print:ALL",
  "project": "view:ALL print:ALL",
  "publication": "view:ALL print:ALL",
  "purchaseorder": "view:ALL create:ALL update:ALL delete:OWN_GROUP approve:ALL print:ALL",
  "purchasereturn": "view:ALL create:ALL update:ALL delete:OWN_GROUP approve:ALL print:ALL",
  "region": "view:ALL print:ALL",
  "report": "view:ALL print:ALL",
  "retailsale": "view:ALL print:ALL",
  "saleschannel": "view:ALL print:ALL",
  "salesreturn": "view:ALL print:ALL",
  "service": "view:ALL print:ALL",
  "store": "view:ALL print:ALL",
  "storecell": "view:ALL print:ALL",
  "supply": "view:ALL create:ALL update:ALL delete:OWN_GROUP approve:ALL print:ALL",
  "task": "view:ALL print:ALL",
  "tasktype": "view:ALL print:ALL",
  "taxrate": "view:ALL print:ALL",
  "trackingcode": "view:ALL print:ALL",
  "uom": "view:ALL print:ALL",
  "variant": "view:ALL create:ALL update:ALL print:ALL",
  "workorder": "view:ALL print:ALL",
}
`;

exports[`MK29 — shablon matritsasi snapshot (10/10) > warehouse_manager matritsasi 1`] = `
{
  "attachment": "view:ALL print:ALL",
  "bom": "view:ALL print:ALL",
  "bundle": "view:ALL update:ALL print:ALL",
  "call": "view:ALL print:ALL",
  "cashdesk": "view:ALL print:ALL",
  "cashiersession": "view:ALL print:ALL",
  "commissionreport": "view:ALL print:ALL",
  "consignment": "view:ALL print:ALL",
  "contactperson": "view:ALL print:ALL",
  "contract": "view:ALL print:ALL",
  "counterparty": "view:ALL print:ALL",
  "country": "view:ALL print:ALL",
  "currency": "view:ALL print:ALL",
  "customentity": "view:ALL print:ALL",
  "customerorder": "view:ALL print:ALL",
  "debt": "view:ALL print:ALL",
  "debtcardpayment": "view:ALL print:ALL",
  "debtpayment": "view:ALL print:ALL",
  "debtreport": "view:ALL print:ALL",
  "demand": "view:ALL update:ALL approve:ALL print:ALL",
  "discount": "view:ALL print:ALL",
  "employee": "view:ALL",
  "enter": "view:ALL create:ALL update:ALL delete:OWN_GROUP approve:ALL print:ALL",
  "exchangerate": "view:ALL print:ALL",
  "expenseitem": "view:ALL print:ALL",
  "facturein": "view:ALL create:ALL update:ALL approve:ALL print:ALL",
  "factureout": "view:ALL print:ALL",
  "internalorder": "view:ALL create:ALL update:ALL delete:OWN_GROUP approve:ALL print:ALL",
  "inventory": "view:ALL create:ALL update:ALL delete:OWN_GROUP approve:ALL print:ALL",
  "invoicein": "view:ALL create:ALL update:ALL approve:ALL print:ALL",
  "invoiceout": "view:ALL print:ALL",
  "label": "view:ALL print:ALL",
  "loss": "view:ALL create:ALL update:ALL delete:OWN_GROUP approve:ALL print:ALL",
  "move": "view:ALL create:ALL update:ALL delete:OWN_GROUP approve:ALL print:ALL",
  "mxik": "view:ALL print:ALL",
  "onlineorder": "view:ALL print:ALL",
  "opportunity": "view:ALL print:ALL",
  "pipeline": "view:ALL print:ALL",
  "pricelist": "view:ALL create:ALL update:ALL delete:OWN_GROUP approve:ALL print:ALL",
  "pricetype": "view:ALL print:ALL",
  "processing": "view:ALL print:ALL",
  "processingorder": "view:ALL print:ALL",
  "processingprocess": "view:ALL print:ALL",
  "processingstage": "view:ALL print:ALL",
  "product": "view:ALL update:ALL print:ALL",
  "productfolder": "view:ALL update:ALL print:ALL",
  "project": "view:ALL print:ALL",
  "publication": "view:ALL print:ALL",
  "purchaseorder": "view:ALL create:ALL update:ALL approve:ALL print:ALL",
  "purchasereturn": "view:ALL create:ALL update:ALL approve:ALL print:ALL",
  "region": "view:ALL print:ALL",
  "report": "view:ALL print:ALL",
  "retailsale": "view:ALL print:ALL",
  "saleschannel": "view:ALL print:ALL",
  "salesreturn": "view:ALL print:ALL",
  "service": "view:ALL print:ALL",
  "store": "view:ALL update:ALL print:ALL",
  "storecell": "view:ALL update:ALL print:ALL",
  "supply": "view:ALL create:ALL update:ALL approve:ALL print:ALL",
  "task": "view:ALL print:ALL",
  "tasktype": "view:ALL print:ALL",
  "taxrate": "view:ALL print:ALL",
  "trackingcode": "view:ALL print:ALL",
  "uom": "view:ALL print:ALL",
  "variant": "view:ALL update:ALL print:ALL",
  "workorder": "view:ALL print:ALL",
}
`;
